--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
 </head>
 <body>
 
-<!-- PARTICLES CANVAS -->
-<canvas id="particles"></canvas>
-
 <!-- NAVBAR -->
 <nav class="fixed top-0 left-0 w-full z-50 px-8 py-5 flex justify-between items-center bg-transparent">
   <div class="flex items-center space-x-2">
@@ -35,11 +32,11 @@
 
 <!-- HERO -->
 <section id="home" class="relative min-h-screen flex flex-col justify-center items-center text-center px-6 pt-32 overflow-hidden">
-  <img src="https://i.postimg.cc/cJ5rWr3M/Radicle-MC-Logo-No-BG.png" alt="RadicleMC Logo" class="h-80 mb-6 relative z-10">
-  <h1 class="font-poppins text-7xl font-bold uppercase mb-6 relative z-10" style="background: linear-gradient(90deg, #FFD700, #B8860B); -webkit-background-clip: text; color: transparent;">
+  <img src="https://i.postimg.cc/cJ5rWr3M/Radicle-MC-Logo-No-BG.png" alt="RadicleMC Logo" class="h-80 mb-6">
+  <h1 class="font-poppins text-7xl font-bold uppercase mb-6" style="background: linear-gradient(90deg, #FFD700, #B8860B); -webkit-background-clip: text; color: transparent;">
     GROW. FIGHT. RISE.
   </h1>
-  <p class="text-xl md:text-2xl max-w-2xl mb-10 relative z-10" style="background: linear-gradient(90deg, #DAA520, #FFD700); -webkit-background-clip: text; color: transparent;">
+  <p class="text-xl md:text-2xl max-w-2xl mb-10 relative" style="background: linear-gradient(90deg, #DAA520, #FFD700); -webkit-background-clip: text; color: transparent;">
     Welcome to <span class="font-semibold" style="color:#FFD700">RadicleMC Lifesteal</span> — grow stronger with every battle and every heart you claim.
   </p>
 
@@ -54,6 +51,11 @@
       <span id="playerCount">Loading players...</span>
     </div>
   </div>
+
+  <!-- Floating icons -->
+  <i data-feather="heart" class="floating-icon" style="color:#FF4D4D; left:20%; top:70%; width:30px; height:30px;"></i>
+  <i data-feather="sword" class="floating-icon" style="color:#FFD700; left:50%; top:80%; width:30px; height:30px; animation-delay:1s;"></i>
+  <i data-feather="star" class="floating-icon" style="color:#FFB347; left:70%; top:75%; width:25px; height:25px; animation-delay:2s;"></i>
 </section>
 
 <!-- PLAY NOW MODAL -->
@@ -69,22 +71,78 @@
 
 <!-- ABOUT / FEATURES -->
 <section id="about" class="py-24 text-center">
-  <!-- ... same as your original HTML ... -->
+  <h2 class="font-poppins text-4xl font-bold uppercase mb-6" style="background: linear-gradient(90deg,#FFD700,#B8860B);-webkit-background-clip:text;color:transparent;">The Ultimate Lifesteal Experience</h2>
+  <p class="max-w-3xl mx-auto text-lg mb-12" style="color:#D2B48C;">
+    RadicleMC is a competitive Lifesteal network where every hit counts, every kill matters, and every heart fuels your rise to power.
+  </p>
+
+  <div class="grid md:grid-cols-4 gap-10 mt-16">
+    <div class="feature-card" style="background: linear-gradient(135deg,#FFF8DC,#FFE4B5);">
+      <i data-feather="heart" class="w-10 h-10 mb-4 mx-auto" style="color:#FF4D4D;"></i>
+      <h3 class="font-bold text-xl mb-2" style="color:#8B4513;">Lifesteal Combat</h3>
+      <p style="color:#A0522D;">Steal hearts from enemies and grow stronger every fight.</p>
+    </div>
+    <div class="feature-card" style="background: linear-gradient(135deg,#FAFAD2,#FFFACD);">
+      <i data-feather="users" class="w-10 h-10 mb-4 mx-auto" style="color:#FFA500;"></i>
+      <h3 class="font-bold text-xl mb-2" style="color:#8B4513;">Duels & Clans</h3>
+      <p style="color:#A0522D;">Form clans and fight in dynamic multiplayer battles.</p>
+    </div>
+    <div class="feature-card" style="background: linear-gradient(135deg,#FFEFD5,#FFE4C4);">
+      <i data-feather="gift" class="w-10 h-10 mb-4 mx-auto" style="color:#FFD700;"></i>
+      <h3 class="font-bold text-xl mb-2" style="color:#8B4513;">Crates & Rewards</h3>
+      <p style="color:#A0522D;">Earn rare loot and exclusive items through challenges.</p>
+    </div>
+    <div class="feature-card" style="background: linear-gradient(135deg,#FFF8DC,#FAF0E6);">
+      <i data-feather="award" class="w-10 h-10 mb-4 mx-auto" style="color:#DAA520;"></i>
+      <h3 class="font-bold text-xl mb-2" style="color:#8B4513;">Seasonal Leaderboards</h3>
+      <p style="color:#A0522D;">Climb the ranks and prove your dominance each season.</p>
+    </div>
+  </div>
 </section>
 
 <!-- GAME MODES -->
 <section id="modes" class="py-24 text-center">
-  <!-- ... same as your original HTML ... -->
+  <h2 class="font-poppins text-4xl font-bold uppercase mb-6" style="background: linear-gradient(90deg,#FFD700,#B8860B);-webkit-background-clip:text;color:transparent;">Game Modes</h2>
+  <div class="grid md:grid-cols-3 gap-8 mt-12">
+    <div class="game-mode-card" style="background: linear-gradient(135deg,#FFF8DC,#FFE4B5);">
+      <i data-feather="users" class="w-12 h-12 mb-4 mx-auto" style="color:#FFA500;"></i>
+      <h3 class="font-bold text-2xl mb-2" style="color:#8B4513;">PvP Arena</h3>
+      <p style="color:#A0522D;">Every player fights for dominance in open PvP battles.</p>
+    </div>
+    <div class="game-mode-card" style="background: linear-gradient(135deg,#FAFAD2,#FFFACD);">
+      <i data-feather="activity" class="w-12 h-12 mb-4 mx-auto" style="color:#FFD700;"></i>
+      <h3 class="font-bold text-2xl mb-2" style="color:#8B4513;">Crystal PvP</h3>
+      <p style="color:#A0522D;">Collect crystals, gain power, and battle other players for rewards.</p>
+    </div>
+    <div class="game-mode-card" style="background: linear-gradient(135deg,#FFEFD5,#FFE4C4);">
+      <i data-feather="map" class="w-12 h-12 mb-4 mx-auto" style="color:#DAA520;"></i>
+      <h3 class="font-bold text-2xl mb-2" style="color:#8B4513;">Clan Wars</h3>
+      <p style="color:#A0522D;">Team up with your clan and dominate rival clans in strategic battles.</p>
+    </div>
+  </div>
 </section>
 
 <!-- COMMUNITY -->
 <section id="community" class="py-24 text-center">
-  <!-- ... same as your original HTML ... -->
+  <h2 class="font-poppins text-4xl font-bold uppercase mb-6" style="background: linear-gradient(90deg,#FFD700,#B8860B);-webkit-background-clip:text;color:transparent;">Join Our Thriving Community</h2>
+  <div class="grid md:grid-cols-2 gap-8 mt-12 max-w-3xl mx-auto">
+    <div class="community-card" style="background:#FFF8DC; padding:2rem; border-radius:1rem;">
+      <div class="text-3xl font-bold mb-2" style="color:#8B4513;">5,000+</div>
+      <div style="color:#A0522D;">Discord Members</div>
+    </div>
+    <div class="community-card" style="background:#FAFAD2; padding:2rem; border-radius:1rem;">
+      <div class="text-3xl font-bold mb-2" style="color:#8B4513;">10M+</div>
+      <div style="color:#A0522D;">Hearts Stolen</div>
+    </div>
+  </div>
+  <a href="https://discord.gg/FsC2cz4cp4" target="_blank" class="btn-gold mt-12 inline-flex items-center"><i data-feather="message-circle" class="mr-2"></i> Join Our Discord</a>
 </section>
 
 <!-- FOOTER -->
 <footer class="py-12 text-center">
-  <!-- ... same as your original HTML ... -->
+  <img src="https://i.postimg.cc/cJ5rWr3M/Radicle-MC-Logo-No-BG.png" alt="RadicleMC Logo" class="h-20 mx-auto mb-4">
+  <p class="text-yellow-700 mb-6">RadicleMC Lifesteal PvP Network — grow stronger with every battle and every heart you claim.</p>
+  <p class="text-yellow-600 mt-6 text-sm">&copy; 2025 RadicleMC. All rights reserved.</p>
 </footer>
 
 <script src="script.js"></script>
