--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 
+<!-- Particle Canvas -->
 <canvas id="particles"></canvas>
 
 <!-- NAVBAR -->
@@ -50,7 +51,7 @@
   <div class="mt-14 relative z-10">
     <div class="relative px-6 py-2 bg-yellow-700 text-yellow-50 rounded-full font-bold flex items-center shadow-md">
       <span class="inline-block w-3 h-3 bg-red-500 rounded-full mr-2 animate-ping"></span>
-      <span id="playerCount">Loading...</span>
+      <span id="playerCount">Loading Players...</span>
     </div>
   </div>
 
