--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>RadicleMC | Lifesteal PvP Network</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700;800&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700;800&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
 <!-- NAVBAR -->
 <nav class="fixed top-0 left-0 w-full z-50 px-8 py-5 flex justify-between items-center bg-transparent">
   <div class="flex items-center space-x-2">
-    <a href="#home" class="flex items-center space-x-2">
+    <a href="#home" class="flex items-center space-x-2 scroll-link">
       <img src="https://i.postimg.cc/cJ5rWr3M/Radicle-MC-Logo-No-BG.png" alt="RadicleMC Logo" class="h-14">
       <span class="text-2xl font-bold text-yellow-600">RadicleMC</span>
     </a>
@@ -36,11 +36,11 @@
 <!-- HERO -->
 <section id="home" class="relative min-h-screen flex flex-col justify-center items-center text-center px-6 pt-32 overflow-hidden">
   <img src="https://i.postimg.cc/cJ5rWr3M/Radicle-MC-Logo-No-BG.png" alt="RadicleMC Logo" class="h-80 mb-6">
-  <h1 class="font-poppins text-7xl font-bold uppercase mb-6" style="background: linear-gradient(90deg, #FFD700, #B8860B); -webkit-background-clip: text; color: transparent;">
+  <h1 class="font-poppins text-7xl font-bold uppercase mb-6">
     GROW. FIGHT. RISE.
   </h1>
-  <p class="text-xl md:text-2xl max-w-2xl mb-10 relative" style="background: linear-gradient(90deg, #DAA520, #FFD700); -webkit-background-clip: text; color: transparent;">
-    Welcome to <span class="font-semibold" style="color:#FFD700">RadicleMC Lifesteal</span> — grow stronger with every battle and every heart you claim.
+  <p class="text-xl md:text-2xl max-w-2xl mb-10 relative">
+    Welcome to <span class="font-semibold">RadicleMC Lifesteal</span> — grow stronger with every battle and every heart you claim.
   </p>
 
   <div class="flex flex-wrap justify-center gap-4 relative z-10">
@@ -72,70 +72,70 @@
   </div>
 </div>
 
-<!-- ABOUT / FEATURES -->
+<!-- ABOUT -->
 <section id="about" class="py-24 text-center">
-  <h2 class="font-poppins text-4xl font-bold uppercase mb-6" style="background: linear-gradient(90deg,#FFD700,#B8860B);-webkit-background-clip:text;color:transparent;">The Ultimate Lifesteal Experience</h2>
-  <p class="max-w-3xl mx-auto text-lg mb-12" style="color:#D2B48C;">
+  <h2 class="font-poppins text-4xl font-bold uppercase mb-6">The Ultimate Lifesteal Experience</h2>
+  <p class="max-w-3xl mx-auto text-lg mb-12">
     RadicleMC is a competitive Lifesteal network where every hit counts, every kill matters, and every heart fuels your rise to power.
   </p>
 
   <div class="grid md:grid-cols-4 gap-10 mt-16">
     <div class="feature-card" style="background: linear-gradient(135deg,#FFF8DC,#FFE4B5);">
       <i data-feather="heart" class="w-10 h-10 mb-4 mx-auto" style="color:#FF4D4D;"></i>
-      <h3 class="font-bold text-xl mb-2" style="color:#8B4513;">Lifesteal Combat</h3>
-      <p style="color:#A0522D;">Steal hearts from enemies and grow stronger every fight.</p>
+      <h3>Lifesteal Combat</h3>
+      <p>Steal hearts from enemies and grow stronger every fight.</p>
     </div>
     <div class="feature-card" style="background: linear-gradient(135deg,#FAFAD2,#FFFACD);">
       <i data-feather="users" class="w-10 h-10 mb-4 mx-auto" style="color:#FFA500;"></i>
-      <h3 class="font-bold text-xl mb-2" style="color:#8B4513;">Duels & Clans</h3>
-      <p style="color:#A0522D;">Form clans and fight in dynamic multiplayer battles.</p>
+      <h3>Duels & Clans</h3>
+      <p>Form clans and fight in dynamic multiplayer battles.</p>
     </div>
     <div class="feature-card" style="background: linear-gradient(135deg,#FFEFD5,#FFE4C4);">
       <i data-feather="gift" class="w-10 h-10 mb-4 mx-auto" style="color:#FFD700;"></i>
-      <h3 class="font-bold text-xl mb-2" style="color:#8B4513;">Crates & Rewards</h3>
-      <p style="color:#A0522D;">Earn rare loot and exclusive items through challenges.</p>
+      <h3>Crates & Rewards</h3>
+      <p>Earn rare loot and exclusive items through challenges.</p>
     </div>
     <div class="feature-card" style="background: linear-gradient(135deg,#FFF8DC,#FAF0E6);">
       <i data-feather="award" class="w-10 h-10 mb-4 mx-auto" style="color:#DAA520;"></i>
-      <h3 class="font-bold text-xl mb-2" style="color:#8B4513;">Seasonal Leaderboards</h3>
-      <p style="color:#A0522D;">Climb the ranks and prove your dominance each season.</p>
+      <h3>Seasonal Leaderboards</h3>
+      <p>Climb the ranks and prove your dominance each season.</p>
     </div>
   </div>
 </section>
 
 <!-- GAME MODES -->
 <section id="modes" class="py-24 text-center">
-  <h2 class="font-poppins text-4xl font-bold uppercase mb-6" style="background: linear-gradient(90deg,#FFD700,#B8860B);-webkit-background-clip:text;color:transparent;">Game Modes</h2>
+  <h2 class="font-poppins text-4xl font-bold uppercase mb-6">Game Modes</h2>
   <div class="grid md:grid-cols-3 gap-8 mt-12">
     <div class="game-mode-card" style="background: linear-gradient(135deg,#FFF8DC,#FFE4B5);">
       <i data-feather="users" class="w-12 h-12 mb-4 mx-auto" style="color:#FFA500;"></i>
-      <h3 class="font-bold text-2xl mb-2" style="color:#8B4513;">PvP Arena</h3>
-      <p style="color:#A0522D;">Every player fights for dominance in open PvP battles.</p>
+      <h3>PvP Arena</h3>
+      <p>Every player fights for dominance in open PvP battles.</p>
     </div>
     <div class="game-mode-card" style="background: linear-gradient(135deg,#FAFAD2,#FFFACD);">
       <i data-feather="activity" class="w-12 h-12 mb-4 mx-auto" style="color:#FFD700;"></i>
-      <h3 class="font-bold text-2xl mb-2" style="color:#8B4513;">Crystal PvP</h3>
-      <p style="color:#A0522D;">Collect crystals, gain power, and battle other players for rewards.</p>
+      <h3>Crystal PvP</h3>
+      <p>Collect crystals, gain power, and battle other players for rewards.</p>
     </div>
     <div class="game-mode-card" style="background: linear-gradient(135deg,#FFEFD5,#FFE4C4);">
       <i data-feather="map" class="w-12 h-12 mb-4 mx-auto" style="color:#DAA520;"></i>
-      <h3 class="font-bold text-2xl mb-2" style="color:#8B4513;">Clan Wars</h3>
-      <p style="color:#A0522D;">Team up with your clan and dominate rival clans in strategic battles.</p>
+      <h3>Clan Wars</h3>
+      <p>Team up with your clan and dominate rival clans in strategic battles.</p>
     </div>
   </div>
 </section>
 
 <!-- COMMUNITY -->
 <section id="community" class="py-24 text-center">
-  <h2 class="font-poppins text-4xl font-bold uppercase mb-6" style="background: linear-gradient(90deg,#FFD700,#B8860B);-webkit-background-clip:text;color:transparent;">Join Our Thriving Community</h2>
+  <h2 class="font-poppins text-4xl font-bold uppercase mb-6">Join Our Thriving Community</h2>
   <div class="grid md:grid-cols-2 gap-8 mt-12 max-w-3xl mx-auto">
     <div class="community-card" style="background:#FFF8DC; padding:2rem; border-radius:1rem;">
-      <div class="text-3xl font-bold mb-2" style="color:#8B4513;">5,000+</div>
-      <div style="color:#A0522D;">Discord Members</div>
+      <div class="text-3xl font-bold mb-2">5,000+</div>
+      <div>Discord Members</div>
     </div>
     <div class="community-card" style="background:#FAFAD2; padding:2rem; border-radius:1rem;">
-      <div class="text-3xl font-bold mb-2" style="color:#8B4513;">10M+</div>
-      <div style="color:#A0522D;">Hearts Stolen</div>
+      <div class="text-3xl font-bold mb-2">10M+</div>
+      <div>Hearts Stolen</div>
     </div>
   </div>
   <a href="https://discord.gg/FsC2cz4cp4" target="_blank" class="btn-gold mt-12 inline-flex items-center"><i data-feather="message-circle" class="mr-2"></i> Join Our Discord</a>
@@ -149,29 +149,5 @@
 </footer>
 
 <script src="script.js"></script>
-<script>
-feather.replace();
-
-// Smooth scroll
-document.querySelectorAll('.scroll-link').forEach(link=>{
-  link.addEventListener('click', function(e){
-    e.preventDefault();
-    document.querySelector(this.getAttribute('href')).scrollIntoView({behavior:'smooth'});
-  });
-});
-
-// Modal
-const modal = document.getElementById('modal');
-const playBtn = document.getElementById('playNowBtn');
-const closeModal = document.getElementById('closeModal');
-playBtn.addEventListener('click', ()=> modal.classList.add('active'));
-closeModal.addEventListener('click', ()=> modal.classList.remove('active'));
-document.getElementById('copyBtn').addEventListener('click', ()=>{
-  const ip = document.getElementById('serverIp');
-  ip.select();
-  navigator.clipboard.writeText(ip.value);
-  alert('Server IP copied!');
-});
-</script>
 </body>
 </html>
